--- a/about.css
+++ b/about.css
@@ -65,7 +65,7 @@ nav ul li a {
     display: flex;
     justify-content: left;
     align-items: left;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 /* The circular image styling */
@@ -76,6 +76,12 @@ nav ul li a {
     object-fit: cover;    /* Ensures the image covers the circle without distortion */
     border: 3px solid #fff;  /* Optional: Adds a border around the image */
 }
+.container {
+    width: 90%; /* 90% of the screen width */
+    max-width: 1200px; /* Max width of 1200px for larger screens */
+    margin: 0 auto;
+}
+
 
 /* Contact Section */
 #contact {
